fixed dark mode issue (until I can add dark mode)

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,9 +3,8 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: #000000;
+  background-color: #ffffff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -73,15 +72,3 @@ p, li, button, a, b {
   font-family: "Calibri", sans-serif;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  /* a:hover {
-    color: #f9f9f9;
-  } */
-  button {
-    background-color: #f9f9f9;
-  }
-}
